# eeg-fm-paper-roundup

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: monthly.yml  test.yml
docs/: index.html
docs/assets/: site.js  style.css
docs/data/: months.json
docs/digest/2021-01/: index.html
docs/digest/2021-02/: index.html
docs/digest/2021-03/: index.html
docs/digest/2021-04/: index.html
docs/digest/2021-05/: index.html
docs/digest/2021-06/: index.html
docs/digest/2021-07/: index.html
docs/digest/2021-08/: index.html
docs/digest/2021-09/: index.html
docs/digest/2021-10/: index.html
docs/digest/2021-11/: index.html
docs/digest/2021-12/: index.html
docs/digest/2022-01/: index.html
docs/digest/2022-02/: index.html
docs/digest/2022-03/: index.html
docs/digest/2022-04/: index.html
docs/digest/2022-05/: index.html
docs/digest/2022-06/: index.html
docs/digest/2022-07/: index.html
docs/digest/2022-08/: index.html
docs/digest/2022-09/: index.html
docs/digest/2022-10/: index.html
docs/digest/2022-11/: index.html
docs/digest/2022-12/: index.html
docs/digest/2023-01/: index.html
docs/digest/2023-02/: index.html
docs/digest/2023-03/: index.html
docs/digest/2023-04/: index.html
docs/explore/: index.html
docs/process/: index.html
prompts/: repair_json.md  summarize.md  triage.md
schemas/: digest.json  summary.json  triage.json
src/eegfm_digest/: arxiv.py  config.py  llm_gemini.py  pdf.py  pipeline.py  run.py  site.py  summarize.py  triage.py
tests/fixtures/: month_page_snapshot.html
(+44 files in other folders)
